---
source: crates/wsh-lang/src/parser/v2/mod.rs
expression: "String::from_utf8(buf).unwrap()"
---
Error: expected ident for environment variable name
   ╭─[<test>:1:8]
   │
 1 │ export $HELLO = 1 + 1
   │        ───┬──  
   │           ╰──── this should be a regular identifier
───╯

